added color names

--- a/login/login-custom.css
+++ b/login/login-custom.css
@@ -1,3 +1,9 @@
+/*
+ * COLORS (from colors.lol)
+ * grassiest charcoal #343837
+ * indiscernible ocean blue #03719C
+ * unsusceptible blue/green #0F9B8E
+ */
 			html {
 				height: 100%;
 			}
