added fade-in animation for login block

--- a/login/login-custom.css
+++ b/login/login-custom.css
@@ -32,6 +32,9 @@ div.flex-container {
 }
 
 div.login {
+	animation: fade-in ease 2s;
+	animation-iteration-count: 1;
+	animation-fill-mode: forwards;
 	width: auto;
 	background: #EFEFEF;
 	text-align: center;
@@ -124,4 +127,9 @@ input:invalid {
 	to {
 		transform: rotate(360deg);
 	}
+}
+
+@keyframes fade-in {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
 }
